Fix fleet crawler name
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/warning.d/autodiscovery/fleet/git.yaml
+++ b/e2e/updatecli.d/warning.d/autodiscovery/fleet/git.yaml
@@ -16,6 +16,6 @@ autodiscovery:
       #  - path: <filepath relative to scm repository>
       #only:
       #  - path: <filepath relative to scm repository>
-    fleet:
+    rancher/fleet:
       # By default it's enable 
       enable: true
