Update testdata to use real docker image
Signed-off-by: Olblak <me@olblak.com>

--- a/pkg/plugins/autodiscovery/helm/testdata/chart/epinio/values.yaml
+++ b/pkg/plugins/autodiscovery/helm/testdata/chart/epinio/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: epinio/epinio
+  repository: splatform/epinio-server
   tag: latest
 images:
   ui:
-    repository: epinio/epinio-ui
+    repository: epinioteam/epinio-ui-qa
     tag: latest
