--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -32,14 +32,18 @@ jobs:
           VENOM_VERSION: v1.0.1
       - name: Show Venom version
         run: venom version
+
       - name: Install GoReleaser
         uses: goreleaser/goreleaser-action@v3
         with:
           install-only: true
+
       - name: Show GoReleaser version
         run: goreleaser --version
+
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
@@ -47,13 +51,16 @@ jobs:
           # and must be specified without patch version:
           # we always use the latest patch version.
           version: v1.47
+
       - name: Build
         run: make build
+
       - name: Quick Test
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: make test-short
         if: ${{ github.event_name == 'pull_request' }}
+
       - name: All Test
         env:
           # Access only to ec2 AMI api in read-only
@@ -66,6 +73,12 @@ jobs:
           UPDATECLI_GITEA_TOKEN: ${{ secrets.UPDATECLI_GITEA_TOKEN }}
         run: make test
         if: ${{ github.event_name == 'schedule' }}
+
+      # Codecov should only be updated if make test is executed
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        if: ${{ github.event_name == 'schedule' }}
+
       - name: Run End to End tests
         run: make test-e2e
         env:
