Comment e2e gittag semver config
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/success.d/source/gitTag.yaml
+++ b/e2e/updatecli.d/success.d/source/gitTag.yaml
@@ -18,7 +18,10 @@ sources:
     name: Get latest updatecli test
     kind: gittag
     spec:
-      versionfilter:
-        kind: semver
-        pattern: "~0.1"
+      # comment following test until dockerimage and semver versionfilter move out from experimental
+      # more ctx on https://github.com/updatecli/updatecli/pull/816
+
+      #versionfilter:
+      #  kind: semver
+      #  pattern: "~0.1"
     scmid: updatecli
