--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -29,7 +29,7 @@ jobs:
           sudo chmod +x /usr/local/bin/venom
           ls -lha /usr/local/bin/venom
         env:
-          VENOM_VERSION: v1.0.1
+          VENOM_VERSION: 1.0.1
       - name: Show Venom version
         run: venom version
 
