--- a/e2e/updatecli.d/success.d/githubPullrequest.yaml
+++ b/e2e/updatecli.d/success.d/githubPullrequest.yaml
@@ -11,18 +11,15 @@ scms:
       branch: main
 
 sources:
-  jenkins: 
+  jenkins:
     name: Get updatecli config title
-    kind: yaml 
+    kind: jenkins
     scmid: default
-    spec:
-      file: "updatecli/updatecli.d/updatecli.yaml"
-      key: "title"
 
 targets:
-  jenkins: 
+  jenkins:
     name: Update updatecli config title
-    kind: yaml 
+    kind: yaml
     scmid: default
     spec:
       file: "updatecli/updatecli.d/updatecli.yaml"
