Fix: yaml source workdir relying on scm
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/success.d/githubPullrequest.yaml
+++ b/e2e/updatecli.d/success.d/githubPullrequest.yaml
@@ -13,13 +13,16 @@ scms:
 sources:
   jenkins:
     name: Get updatecli config title
-    kind: jenkins
+    kind: yaml
     scmid: default
+    spec:
+      file: "updatecli/updatecli.d/updatecli.yaml"
+      key: "title"
 
 targets:
-  jenkins:
+  jenkins: 
     name: Update updatecli config title
-    kind: yaml
+    kind: yaml 
     scmid: default
     spec:
       file: "updatecli/updatecli.d/updatecli.yaml"
