Add new parameter "repositories" to Maven resource (#832)
* Add parameters repositories to maven resource

Signed-off-by: Olblak <me@olblak.com>

* Deprecate URL parameter

Do not print username&password in maven console message

Signed-off-by: Olblak <me@olblak.com>

* Fix: trimusernamepassword function

Signed-off-by: Olblak <me@olblak.com>

* Rename test function to match the new testing function name

Signed-off-by: Olblak <me@olblak.com>

* Remove broken e2e test

Signed-off-by: Olblak <me@olblak.com>

Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/success.d/maven.yaml
+++ b/e2e/updatecli.d/success.d/maven.yaml
@@ -9,15 +9,21 @@ sources:
   getLatestJenkinsWarVersion:
     kind: maven
     spec:
-      url: "repo.jenkins-ci.org"
-      repository: "releases"
+      repository: "http://repo.jenkins-ci.org/releases"
       groupid: "org.jenkins-ci.main"
       artifactid: "jenkins-war"
   getLatestJunitVersion:
     kind: maven
     spec:
-      url: "repo.maven.apache.org"
-      repository: "maven2"
+      repository: "repo.maven.apache.org/maven2"
+      groupid: "junit"
+      artifactid: "junit"
+  getLatestJunitVersionfromRepositories:
+    kind: maven
+    spec:
+      repositories:
+        - "repo.maven.apache.org/maven2"
+        - "https://repo.maven.apache.org/maven2"
       groupid: "junit"
       artifactid: "junit"
 
@@ -27,8 +33,39 @@ conditions:
     name: Is there a version 4.3.1 of junit/junit at https://repo.maven.apache.org/maven2
     disablesourceinput: true
     spec:
-      url: "repo.maven.apache.org"
-      repository: "maven2"
+      repository: "repo.maven.apache.org/maven2"
+      groupid: "junit"
+      artifactid: "junit"
+      version: "4.3.1"
+
+  checkIfOlderJunitExistr2:
+    kind: maven
+    name: Is there a version 4.3.1 of junit/junit at https://repo.maven.apache.org/maven2
+    disablesourceinput: true
+    spec:
+      repository: "https://repo.maven.apache.org/maven2"
+      groupid: "junit"
+      artifactid: "junit"
+      version: "4.3.1"
+
+  checkIfOlderJunitExist3:
+    kind: maven
+    name: Is there a version 4.3.1 of junit/junit at https://repo.maven.apache.org/maven2
+    disablesourceinput: true
+    spec:
+      repositories:
+        - "repo.maven.apache.org/maven2"
+      groupid: "junit"
+      artifactid: "junit"
+      version: "4.3.1"
+
+  checkIfOlderJunitExist4:
+    kind: maven
+    name: Is there a version 4.3.1 of junit/junit at https://repo.maven.apache.org/maven2
+    disablesourceinput: true
+    spec:
+      repositories:
+        - "https://repo.maven.apache.org/maven2"
       groupid: "junit"
       artifactid: "junit"
       version: "4.3.1"
