--- a/e2e/updatecli.d/success.d/githubPullrequest.yaml
+++ b/e2e/updatecli.d/success.d/githubPullrequest.yaml
@@ -17,7 +17,7 @@ sources:
     scmid: default
     spec:
       file: "updatecli/updatecli.d/updatecli.yaml"
-      key: "title"
+      key: "name"
 
 targets:
   jenkins: 
@@ -26,7 +26,7 @@ targets:
     scmid: default
     spec:
       file: "updatecli/updatecli.d/updatecli.yaml"
-      key: "title"
+      key: "name"
 
 pullrequests:
   prID1:
