--- a/.github/workflows/updatecli.yaml
+++ b/.github/workflows/updatecli.yaml
@@ -17,8 +17,7 @@ jobs:
         uses: "updatecli/updatecli-action@v2.6.1"
       - name: Set up Go
         uses: actions/setup-go@v3
-        with:
-          go-version: 1.19.1
+        check-latest: true
         id: go
       - name: "Run updatecli in dryrun"
         run: "updatecli diff --config ./updatecli/updatecli.d"
