correctly set e2e test rootdir
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/venom.d/test_deprecated.yaml
+++ b/e2e/venom.d/test_deprecated.yaml
@@ -6,7 +6,7 @@ vars:
 testcases:
   - name: "Test updatecli diff shouldn't fail"
     steps:
-      - script: '{{ .binpath }}/updatecli diff --config  ../updatecli.d/deprecated.d'
+      - script: '../scripts/test_deprecated.bash'
         type: 'exec'
         assertions:
           - 'result.code ShouldEqual 0'
