--- a/e2e/venom.d/test_diff.yaml
+++ b/e2e/venom.d/test_diff.yaml
@@ -7,7 +7,7 @@ vars:
 testcases:
   - name: "Test updatecli diff shouldn't fail"
     steps:
-      - script: '{{ .binpath }}/updatecli diff --config  ../updatecli.d/success.d'
+      - script: '../scripts/test_diff.bash'
         type: 'exec'
         assertions:
           - 'result.code ShouldEqual 0'
