--- a/e2e/updatecli.d/success.d/helmchart.yaml
+++ b/e2e/updatecli.d/success.d/helmchart.yaml
@@ -42,6 +42,7 @@ targets:
     spec:
       name: chart/epinio
       file: Chart.yaml
+      files: []
       appversion: true
       key:  dependencies[1].version
       versionincrement: minor
@@ -53,6 +54,7 @@ targets:
     spec:
       name: chart/epinio
       file: Chart.yaml
+      files: []
       appversion: true
       key:  dependencies[2].version
       versionincrement: minor,major
@@ -63,6 +65,7 @@ targets:
     spec:
       name: chart/epinio
       file: Chart.yaml
+      files: []
       appversion: true
       key:  dependencies[2].version
       versionincrement: none
