--- a/e2e/updatecli.d/warning.d/autodiscovery/fleet/githubPullrequest.yaml
+++ b/e2e/updatecli.d/warning.d/autodiscovery/fleet/githubPullrequest.yaml
@@ -1,3 +1,4 @@
+name: "Fleet Autodiscovery using github scm"
 scms:
   fleet-lab:
     kind: github
@@ -21,17 +22,7 @@ autodiscovery:
   scmid: fleet-lab
   pullrequestid: fleet-lab
   crawlers:
-    helm:
-      # By default enabled
-      enable: true
-      # To ignore specific path
-      #ignore:
-      #  # - path: <filepath relative to scm repository>
-      #only:
-      #  # - path: <filepath relative to scm repository>
     rancher/fleet:
-      # By default it's enable 
-      enable: true
       # To ignore specific path
       #ignore:
       # - path: <filepath relative to scm repository>
