--- a/e2e/updatecli.d/warning.d/autodiscovery/helm/example.1.yaml
+++ b/e2e/updatecli.d/warning.d/autodiscovery/helm/example.1.yaml
@@ -1,3 +1,4 @@
+name: "Helm autodiscovery using git scm"
 scms:
   epinio:
     kind: git
@@ -9,8 +10,6 @@ autodiscovery:
   scmid: epinio
   crawlers:
     helm:
-      # Enabled by default
-      enable: true
       # To ignore specific path
       #ignore:
       #  # - path: <filepath relative to scm repository>
