--- a/e2e/updatecli.d/warning.d/autodiscovery/maven/git.yaml
+++ b/e2e/updatecli.d/warning.d/autodiscovery/maven/git.yaml
@@ -1,3 +1,4 @@
+name: "Maven autodiscovery using git scm"
 scms:
   default:
     kind: git 
@@ -15,16 +16,9 @@ autodiscovery:
   scmid: default
   crawlers:
     maven:
-      # By default enabled
-      enable: true
       # To ignore specific path
       #ignore:
       #  - path: <filepath relative to scm repository>
       #only:
       #  - path: <filepath relative to scm repository>
-    rancher/fleet:
-      # By default it's enable 
-      enable: false
-    helm:
-      # By default it's enable 
-      enable: false
+
