Add http json example
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/success.d/json.yaml
+++ b/e2e/updatecli.d/success.d/json.yaml
@@ -1,26 +1,42 @@
 name: Basic Json Example
 
 sources:
-  local: 
+  local:
     name: Get value from json
     kind: json
-    spec: 
+    spec:
       file: pkg/plugins/resources/json/testdata/data.json
       key: firstName
-       
+  http:
+    name: Get value from json
+    kind: json
+    spec:
+      file: https://www.updatecli.io/schema/latest/config.json
+      key: $id
+
 conditions:
-  local: 
+  local:
     name: Test value from json
     kind: json
-    spec: 
+    sourceid: local
+    spec:
       file: pkg/plugins/resources/json/testdata/data.json
       key: firstName
+  http:
+    name: Test value from json
+    kind: json
+    disablesourceinput: true
+    spec:
+      file: https://www.updatecli.io/schema/latest/config.json
+      key: $schema
+      value: http://json-schema.org/draft-04/schema
 
 targets:
-  local: 
+  local:
     name: Test value from json
     kind: json
-    spec: 
+    sourceid: local
+    spec:
       file: pkg/plugins/resources/json/testdata/data.json
       key: firstName
       value: John
