Convert setting multiple to query to use advanced json query
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/success.d/json.yaml
+++ b/e2e/updatecli.d/success.d/json.yaml
@@ -18,8 +18,7 @@ sources:
     name: Get latest version
     spec:
       file: https://api.github.com/repos/updatecli/updatecli/releases
-      key: ".[*].tag_name"
-      multiple: true
+      query: ".[*].tag_name"
       versionfilter:
         kind: semver
         pattern: "v0.35"
