Allow multiple query combined with versionfilter to csv source
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/success.d/csv.yaml
+++ b/e2e/updatecli.d/success.d/csv.yaml
@@ -8,6 +8,16 @@ sources:
       files:
         - pkg/plugins/resources/csv/testdata/data.csv
       key: .[0].firstname
+  versionfilter:
+    name: Test Version filter`
+    kind: csv
+    spec:
+      files: 
+        - pkg/plugins/resources/csv/testdata/data.csv
+      query: ".[*].firstname"
+      versionfilter:
+        kind: regex
+        pattern: "^Jo"
 
 conditions:
   single:
@@ -25,19 +35,20 @@ targets:
   single:
     name: Basic target update
     kind: csv
+    sourceid: default
     spec:
       files: 
         - pkg/plugins/resources/csv/testdata/data.csv
         - pkg/plugins/resources/csv/testdata/data.csv
-      key: .[1].firstname
+      query: .[1].firstname
       value: John
 
   multiple:
     name: Mulitple target update
     kind: csv
+    sourceid: default
     spec:
       files:
         - pkg/plugins/resources/csv/testdata/data.csv
         - pkg/plugins/resources/csv/testdata/data.csv
-      key: .[*].firstname
-      multiple: true
+      query: .[*].firstname
