Add disabletagsearch to githubrelease
Signed-off-by: Olblak <me@olblak.com>

--- a/e2e/updatecli.d/success.d/githubRelease.yaml
+++ b/e2e/updatecli.d/success.d/githubRelease.yaml
@@ -9,6 +9,7 @@ sources:
       repository: updatecli
       token: '{{ requiredEnv "UPDATECLI_GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "UPDATECLI_GITHUB_ACTOR" }}'
+      disabletagsearch: true
   draft:
     name: Get Latest Draft Release
     kind: githubrelease
@@ -17,6 +18,7 @@ sources:
       repository: updatecli
       token: '{{ requiredEnv "UPDATECLI_GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "UPDATECLI_GITHUB_ACTOR" }}'
+      disabletagsearch: true
       type:
         draft: true
   prerelease:
@@ -38,6 +40,7 @@ sources:
       repository: updatecli
       token: '{{ requiredEnv "UPDATECLI_GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "UPDATECLI_GITHUB_ACTOR" }}'
+      disabletagsearch: true
       type:
         release: true
 conditions:
@@ -49,6 +52,7 @@ conditions:
       owner: updatecli
       repository: updatecli
       token: '{{ requiredEnv "UPDATECLI_GITHUB_TOKEN" }}'
+      disabletagsearch: true
       username: '{{ requiredEnv "UPDATECLI_GITHUB_ACTOR" }}'
   draft:
     name: Get Latest Draft Release
@@ -56,6 +60,7 @@ conditions:
     sourceid: draft
     spec:
       owner: updatecli
+      disabletagsearch: true
       repository: updatecli
       token: '{{ requiredEnv "UPDATECLI_GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "UPDATECLI_GITHUB_ACTOR" }}'
@@ -67,6 +72,7 @@ conditions:
     sourceid: prerelease
     spec:
       owner: updatecli
+      disabletagsearch: true
       repository: updatecli
       token: '{{ requiredEnv "UPDATECLI_GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "UPDATECLI_GITHUB_ACTOR" }}'
@@ -79,6 +85,7 @@ conditions:
     sourceid: release
     spec:
       owner: updatecli
+      disabletagsearch: true
       repository: updatecli
       token: '{{ requiredEnv "UPDATECLI_GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "UPDATECLI_GITHUB_ACTOR" }}'
