--- a/e2e/updatecli.d/success.d/source/githubRelease.2.yaml
+++ b/e2e/updatecli.d/success.d/source/githubRelease.2.yaml
@@ -14,5 +14,6 @@ sources:
       repository: "updatecli"
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
+      disabletagsearch: true
       versionfilter:
         kind: "latest"
