--- a/e2e/updatecli.d/success.d/githubRelease.yaml
+++ b/e2e/updatecli.d/success.d/githubRelease.yaml
@@ -17,8 +17,8 @@ sources:
       repository: updatecli-action
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
-      type:
-        prerelease: true
+      type: 
+        - prerelease
   release:
     name: Get Latest Release
     kind: githubrelease
@@ -28,7 +28,8 @@ sources:
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
       type:
-        release: true
+        - release
+        - draft
 conditions:
   default:
     name: Default Get Latest Release
@@ -49,7 +50,7 @@ conditions:
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
       type:
-        prerelease: true
+        - prerelease
   release:
     name: Get Latest Release
     kind: githubrelease
@@ -60,5 +61,6 @@ conditions:
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
       type:
-        release: true
+        - release
+        - draft
 
