--- a/e2e/updatecli.d/success.d/githubRelease.yaml
+++ b/e2e/updatecli.d/success.d/githubRelease.yaml
@@ -2,45 +2,45 @@ name: Test Github Release
 
 sources:
   default:
-    name: Default Get Latest Release
-    kind: githubrelease
-    spec:
-      owner: updatecli
-      repository: updatecli
-      token: '{{ requiredEnv "GITHUB_TOKEN" }}'
-      username: '{{ requiredEnv "GITHUB_ACTOR" }}'
-  prerelease:
-    name: Get Latest Prelease
+    name: Default Get Latest github action Release
     kind: githubrelease
     spec:
       owner: updatecli
       repository: updatecli-action
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
-      type:
-        prerelease: true
-  release:
-    name: Get Latest Release
+  prerelease:
+    name: Get Latest Github Action Prelease
     kind: githubrelease
     spec:
       owner: updatecli
-      repository: updatecli
+      repository: updatecli-action
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
-      type:
+      typefilter:
+        prerelease: true
+  release:
+    name: Get Latest GitHub Action Release
+    kind: githubrelease
+    spec:
+      owner: updatecli
+      repository: updatecli-action
+      token: '{{ requiredEnv "GITHUB_TOKEN" }}'
+      username: '{{ requiredEnv "GITHUB_ACTOR" }}'
+      typefilter:
         release: true
 conditions:
   default:
-    name: Default Get Latest Release
+    name: Default Get Latest GitHub action Release
     kind: githubrelease
     sourceid: default
     spec:
       owner: updatecli
-      repository: updatecli
+      repository: updatecli-action
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
   prerelease:
-    name: Get Latest Prelease
+    name: Check Latest GitHub Action Prelease
     kind: githubrelease
     sourceid: prerelease
     spec:
@@ -48,17 +48,17 @@ conditions:
       repository: updatecli-action
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
-      type:
+      typefilter:
         prerelease: true
   release:
-    name: Get Latest Release
+    name: Check latest GitHub Action release
     kind: githubrelease
     sourceid: release
     spec:
       owner: updatecli
-      repository: updatecli
+      repository: updatecli-action
       token: '{{ requiredEnv "GITHUB_TOKEN" }}'
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
-      type:
+      typefilter:
         release: true
 
