--- a/pkg/plugins/autodiscovery/dockercompose/testdata/docker-compose.yaml
+++ b/pkg/plugins/autodiscovery/dockercompose/testdata/docker-compose.yaml
@@ -8,6 +8,18 @@ services:
     ports:
       - 27017
 
+
+  ## export UPDATECLI_GITHUB_TOKEN=<your Github PAT>
+  ## export UPDATECLI_GITHUB_ACTOR=<your user name>
+  agent:
+    image: ghcr.io/updatecli/updatemonitor:v0.1.0
+    command: agent start
+    volumes:
+      - "./config.yaml:/home/updatemonitor/.updatemonitor/config.yaml"
+    environment:
+      - UPDATECLI_GITHUB_TOKEN=${UPDATECLI_GITHUB_TOKEN}
+      - UPDATECLI_GITHUB_ACTOR=${UPDATECLI_GITHUB_ACTOR}
+
   server:
     image: ghcr.io/updatecli/updatemonitor:v0.1.0
     command: server start
@@ -24,17 +36,6 @@ services:
       - "traefik.http.middlewares.removeapi.stripprefix.forceSlash=false"
       # If only one port exposed by the container then traefik can detect it
       # - "traefik.http.services.server.loadbalancer.server.port=8080"
-
-  # export UPDATECLI_GITHUB_TOKEN=<your Github PAT>
-  # export UPDATECLI_GITHUB_ACTOR=<your user name>
-  agent:
-    image: ghcr.io/updatecli/updatemonitor:v0.1.0
-    command: agent start
-    volumes:
-      - "./config.yaml:/home/updatemonitor/.updatemonitor/config.yaml"
-    environment:
-      - UPDATECLI_GITHUB_TOKEN=${UPDATECLI_GITHUB_TOKEN}
-      - UPDATECLI_GITHUB_ACTOR=${UPDATECLI_GITHUB_ACTOR}
 
   front:
     image: ghcr.io/updatecli/updatemonitor-ui:v0.1.1
