add architecture support
Signed-off-by: Olblak <me@olblak.com>

--- a/pkg/plugins/autodiscovery/dockercompose/testdata/docker-compose.yaml
+++ b/pkg/plugins/autodiscovery/dockercompose/testdata/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
 
   mongodb:
     image: mongo:6.0.2
+    platform: linux/amd64
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=password
