wip: add deprecation of pullrequests over actions
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/e2e/updatecli.d/deprecated.d/githubPullrequest.yaml
+++ b/e2e/updatecli.d/deprecated.d/githubPullrequest.yaml
@@ -1,3 +1,5 @@
+# Depreciation Warning message expected:
+## This manifest has a 'pullrequests:' top-level directive which is deprecated in favor of 'actions'
 name: Test Github Pullrequest
 
 scms:
@@ -27,7 +29,8 @@ targets:
       file: "updatecli/updatecli.d/updatecli.yaml"
       key: "name"
 
-actions:
+# Deprecated in favor of actions
+pullrequests:
   prID1:
     scmid: default
     kind: github
