--- a/e2e/updatecli.d/warning.d/autodiscovery/fleet/githubPullrequest.yaml
+++ b/e2e/updatecli.d/warning.d/autodiscovery/fleet/githubPullrequest.yaml
@@ -9,7 +9,7 @@ scms:
       username: '{{ requiredEnv "GITHUB_ACTOR" }}'
       branch: main
 
-pullrequests:
+actions:
   fleet-lab:
     kind: github
     scmid: fleet-lab
@@ -20,7 +20,7 @@ pullrequests:
 autodiscovery:
   # scmid is applied to all crawlers
   scmid: fleet-lab
-  pullrequestid: fleet-lab
+  actionid: fleet-lab
   crawlers:
     rancher/fleet:
       # To ignore specific path
