feat: rename 'pullrequests' to 'actions' (#990)
* wip: rename pullrequest files to actions

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* wip: rename code references from 'pullrequest' to 'action'

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* wip: add deprecation of pullrequests over actions

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* wip: add depreciation message for autodiscovery.pullrequestid

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* wip: rename action kind 'github' to 'github/pullrequest' and 'gitea' to 'gitea/pullrequest'

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* Update pkg/core/config/main.go

Co-authored-by: Olivier Vernin <olivier@vernin.me>

* wip: more renamings

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* wip: more renaming to action in autodiscovery

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* Update pkg/core/pipeline/action/main.go

* Update pkg/core/pipeline/action/main.go

* Update pkg/plugins/resources/gitea/pullrequest/create.go

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

* Update pkg/plugins/resources/csv/main.go

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

* Update pkg/core/pipeline/main.go

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

* Update pkg/core/pipeline/actions.go

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

* Update pkg/core/pipeline/actions.go

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

* Update pkg/core/config/main.go

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

* Update pkg/core/engine/main.go

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

* Update README.adoc

Co-authored-by: Hervé Le Meur <91831478+le

--- a/e2e/updatecli.d/deprecated.d/githubPullrequest.yaml
+++ b/e2e/updatecli.d/deprecated.d/githubPullrequest.yaml
@@ -1,4 +1,6 @@
-name: Test Github Pullrequest
+# Depreciation Warning message expected:
+## This manifest has a 'pullrequests:' top-level directive which is deprecated in favor of 'actions'
+name: Test GitHub Pullrequest
 
 scms:
   default:
@@ -27,7 +29,8 @@ targets:
       file: "updatecli/updatecli.d/updatecli.yaml"
       key: "name"
 
-actions:
+# Deprecated in favor of actions
+pullrequests:
   prID1:
     scmid: default
-    kind: github/pullrequest
+    kind: github
