--- a/pkg/plugins/autodiscovery/dockerfile/testdata/alpine/Dockerfile
+++ b/pkg/plugins/autodiscovery/dockerfile/testdata/alpine/Dockerfile
@@ -4,3 +4,5 @@ ARG platform linux/arch64
 FROM --platform=linux/ppc64 alpine:${alpine_version} AS alpine
 FROM --platform=${platform} debian:${debian_version}
 FROM --platform=windows/ppc64 opensuse:15.4
+# Using multiple variable from a Dockerfile instruction is currently not supported by Updatecli, and therefor ignore it
+FROM --platform=linux/ppc64 alpine:${alpine_version}${debian_version} AS alpine
